<resources>
    <string name="app_name">FCM Application</string>
    <string name="fcm">FCM</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now!</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome To</string>
    <string name="boarding2">Future of Fiber Core Management, Expert with visions, More than manage.</string>
    <string name="error_unstable_network">No Network Connection</string>
    <string name="error_unknown_error">There is an error. Please try again</string>
    <string name="error_filter_is_empty">The filter has not been set. Please set it first</string>
    <string name="register_succesfull">Congratulations you have registered. Please Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fdt">FDT</string>
    <string name="fat">FAT</string>
    <string name="other">Others</string>
    <string name="search_fdt">Search FDT</string>
    <string name="repair_list">Repair List</string>
    <string name="hi">Hi,</string>
    <string name="exclamation_mark">!</string>
    <string name="company_profile">Company Profile</string>
    <string name="information">Information</string>
    <string name="logout">Logout</string>
    <string name="others">Others</string>
    <string name="used">Used</string>
    <string name="total_core">Total Core</string>
    <string name="fdt_loss_is">FDT Loss is</string>
    <string name="backup">Backup</string>
    <string name="fdt_location">FDT Location</string>
    <string name="fat_location">FAT Location</string>
    <string name="repair_notes">Repair Notes</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to exit?</string>
    <string name="back_confirmation">Are you sure want to exit? \nAll unsaved changes will be lost without saving</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_covered">Home Covered</string>
    <string name="fat_loss_is">FAT Loss is</string>
    <string name="fdt_profile">FDT Profile</string>
    <string name="fat_covered">FAT Covered</string>
    <string name="fat_profile">FAT Profile</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZWxhbnl1ZGhvIiwiYSI6ImNrdzN0NTlvbjI4ZHIybnFpOHVzbjNwajIifQ.GxYOr2Bs5kVHosgFDQgjAQ</string>
    <string name="activated_on">Activated on</string>
    <string name="start">Start</string>
    <string name="search_result">Search Result</string>
    <string name="search_fat">Search FAT</string>
    <string name="sorry_no_result_found">Sorry, No Result Found</string>
    <string name="data_is_not_available">Sorry, Data Is Not Available</string>
    <string name="data_is_not_available_desc">Data For This Region Is Not Yet Available, Please Come Back Later For The Latest Information</string>
    <string name="we_cannot_find_what_are_you_looking_for_please_try_another_keyword">We Cannot Find What Are You Looking For. Please Try Another Keyword.</string>
    <string name="need_service">Status: Need Service</string>
    <string name="no_fat_covered">No FAT Covered</string>
    <string name="register_now">Register Now!</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="are_you_a_new_member">Are you a new member?</string>
    <string name="add_fd_fat"><![CDATA[Add FDT & FAT]]></string>
    <string name="region_admin">Region Admin</string>
    <string name="region">Region</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="normal">Status: Good Condition</string>
    <string name="add_fdt">Add FDT</string>
    <string name="add_fat">Add FAT</string>
    <string name="edit_fdt">Edit FDT</string>
    <string name="edit_fat">Edit FAT</string>
    <string name="fdt_name">FDT Name</string>
    <string name="ex_fdt_name">Ex: FDTDIY.SLE01</string>
    <string name="ex_fat_name">Ex: FATSLE.DPK01</string>
    <string name="choose_fat">Choose FAT</string>
    <string name="core_are_used">Core Are Used</string>
    <string name="backup_core">Backup Core</string>
    <string name="covered_fat">Covered FAT</string>
    <string name="ex_number_core">Ex: 9</string>
    <string name="ex_longitude">Ex: 110.405138</string>
    <string name="ex_latitude">Ex: -7.771129</string>
    <string name="activation_date">Activation Date</string>
    <string name="set_activation_date">Set Activation Date</string>
    <string name="repair_status">Repair Status</string>
    <string name="repair_note">Repair Note</string>
    <string name="hint_fdt_repair_note">Contains repair notes or other notes about FDT</string>
    <string name="hint_fat_repair_note">Contains repair notes or other notes about FAT</string>
    <string name="save">Save</string>
    <string name="ex_loss">Ex: 1 (db)</string>
    <string name="success_add_fdt">New FDT added successfully</string>
    <string name="success_add_fat">New FAT added successfully</string>
    <string name="success_edit_fdt">New FDT added successfully</string>
    <string name="success_edit_fat">New FAT added successfully</string>
    <string name="success_delete_fdt">FDT deleted successfully</string>
    <string name="success_delete_fat">FAT deleted successfully</string>
    <string name="choose_fdt">Choose FDT</string>
    <string name="fdt_delete_confirmation">Are you sure want to delete this FDT?</string>
    <string name="fat_delete_confirmation">Are you sure want to delete this FAT?</string>
    <string name="last_updated_data">Last Updated Data</string>
    <string name="activated_the_location">Enable location to access this feature</string>


</resources>