<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_dim"
    tools:context=".ui.other.adddata.addfdt.AddFdtActivity">

    <include
        android:id="@+id/headerAddData"
        layout="@layout/header_app" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/fdt_name"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/etFdtName"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etFdtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ex_fdt_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                android:maxLines="1"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/total_core"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etTotalCore"
                app:layout_constraintTop_toBottomOf="@+id/etFdtName" />

            <EditText
                android:id="@+id/etTotalCore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ex_number_core"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                android:maxLines="1"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/core_are_used"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etCoreUsed"
                app:layout_constraintTop_toBottomOf="@+id/etTotalCore" />

            <EditText
                android:id="@+id/etCoreUsed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ex_number_core"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                android:maxLines="1"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/backup_core"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etCoreBackup"
                app:layout_constraintTop_toBottomOf="@+id/etCoreUsed" />

            <EditText
                android:id="@+id/etCoreBackup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ex_number_core"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                android:maxLines="1"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grpCoveredFdt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="etCoveredFdt, materialTextView6"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="Covered Fdt"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etCoveredFdt"
                app:layout_constraintTop_toBottomOf="@+id/etCoreBackup" />

            <EditText
                android:id="@+id/etCoveredFdt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_field"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:layout_marginHorizontal="24dp"
                android:editable="false"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/choose_fat"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFatSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etCoveredFdt"
                tools:listitem="@layout/item_fat_select" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/fdt_location"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etLocation"
                app:layout_constraintTop_toBottomOf="@+id/rvFatSelect" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/ex_location"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                android:maxLines="1"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/activation_date"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etActivationDate"
                app:layout_constraintTop_toBottomOf="@+id/etLocation" />

            <EditText
                android:id="@+id/etActivationDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/bg_field"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/set_activation_date"
                android:paddingVertical="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/repair_status"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/etActivationDate"
                app:layout_constraintTop_toBottomOf="@+id/etActivationDate" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/btnSwRepair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                app:kswBackDrawable="@drawable/bg_repair_status"
                app:kswThumbColor="@color/white"
                app:kswThumbMargin="3dp"
                app:kswTextOff="       "
                app:layout_constraintStart_toStartOf="@+id/materialTextView9"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/repair_note"
                android:textColor="@color/blue_lochmara"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/btnSwRepair"
                app:layout_constraintTop_toBottomOf="@+id/btnSwRepair" />

            <EditText
                android:id="@+id/etRepairNote"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/inter_regular"
                android:gravity="start|top"
                android:hint="@string/hint_fdt_repair_note"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/yellow_selective"
                android:fontFamily="@font/inter_bold"
                android:paddingVertical="10dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etRepairNote"
                app:layout_constraintStart_toStartOf="@+id/etRepairNote"
                app:layout_constraintTop_toBottomOf="@+id/etRepairNote"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>