<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/blue_dim"
    tools:context=".ui.other.dialog.BackConfirmationDialogFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:fontFamily="@font/inter_regular"
            android:text="@string/back_confirmation"
            android:textColor="@color/blue_lochmara"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="24dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_dim"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/yellow_selective"
                android:textSize="14sp"
                android:visibility="visible"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnYes"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/yellow_selective"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow_selective"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginHorizontal="8dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:visibility="visible"
                app:cornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>