<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dim"
    tools:context=".ui.fat.searchresult.SearchResultFatActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:background="@color/blue_lochmara"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchFat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchFat"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:srcCompat="@drawable/ic_back" />

    <com.dicoding.fcmapplication.utils.widget.CustomSearchBar
        android:id="@+id/searchFat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_searchview"
        android:backgroundTint="@color/white"
        android:queryHint="@string/search_fat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_fat"
        app:useAdditionalButton="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/search_result"
        android:textColor="@color/blue_lochmara"
        android:textSize="20sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchFat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5"
        app:reverseLayout="false"
        tools:listitem="@layout/item_device_linear_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sorry_no_result_found"
        android:textColor="@color/blue_lochmara"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    <ImageView
        android:id="@+id/imageNotFound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_not_found"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tvNotFound2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotFound" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotFound2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/we_cannot_find_what_are_you_looking_for_please_try_another_keyword"
        android:textColor="@color/blue_lochmara"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="459dp" />

</androidx.constraintlayout.widget.ConstraintLayout>